DERBY-673 Get rid of the NodeFactory
Patch derby-673-3.

a) Replaced the old init methods in "*Node.java" classes with
   constructors. Some logical node types have different "C_NodeType"
   values in their nodeType field after construction but still share
   the same node class. I have not attempted to increase the number of
   node classes to match logical == physical node classes this
   once. Actually one class was removed because it unused:
   "SQLBooleanConstantNode". "IsNode" is also currently unused but
   there is a JIRA to make use of it (DERBY-5973), so I left it in
   place.

   Boxed argument types were replaced by primitive types except in a
   few cases where instanceof was used on them to detect type
   overloading; this could be gotten rid of by adding more
   constructors.

   Since the constructor arguments are now strongly typed, a great
   many casts were removed in the process and readability is improved
   a lot.

   In some cases the old init procedures did computations before
   calling "super.init". Since the call to the corresponding super
   constructor needs to be the first code in a constructor, I
   sometimes had to introduce new private static methods to compute
   the correct arguments to send on to the super class constructor,
   e.g. "getTypeId" in "UserTypeConstantNode". I think there is some
   redundancy here that could be removed in a follow-up patch.

   All the non-abstract node classes (still) set their corresponding
   "C_NodeType" value; but in many (most?) cases the field is no
   longer needed. This could be improved by removing them altogether
   and introduced class constants where needed to differentiate
   between logical node type mapped to one class. This is already done
   halfheartedly to some extent, e.g. enum "Sign" in "IsNullNode".

   The old "tools/jar/DBMSnodes.properties" file could be removed
   altogether since the node classes are now added automatically due
   to dependencies that the compiler can see 